// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders a simple example matching snapshot: simple table 1`] = `
.c1 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c1:last-child {
  padding-right: 0;
}

.c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c2:last-child {
  padding-right: 0;
}

.c0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

@media print {
  .c0 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c0 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<TableSimple>
  <Table>
    <src__StyledTable>
      <table
        className="c0"
      >
        <TableBody>
          <tbody
            className="TableBody-sc-1qqarm8-0"
          >
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c1"
                    >
                      First 6 weeks
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c2"
                  >
                    £109.80 per week
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c1"
                    >
                      Next 33 weeks
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c2"
                  >
                    £109.80 per week
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c1"
                    >
                      Total estimated pay
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c2"
                  >
                    £4,282.20
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c1"
                    >
                      Tell the mother’s employer
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c2"
                  >
                    28 days before they want to start maternity pay
                  </td>
                </Cell>
              </tr>
            </Row>
          </tbody>
        </TableBody>
      </table>
    </src__StyledTable>
  </Table>
</TableSimple>
`;

exports[`Table renders a table with a caption matching snapshot: table with caption 1`] = `
.c1 {
  font-weight: 700;
  display: table-caption;
  text-align: left;
}

.c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c3:last-child {
  padding-right: 0;
}

.c0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

@media print {
  .c0 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c0 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<TableWithCaption>
  <Table
    body={
      <React.Fragment>
        <Row>
          <CellHeader>
            First 6 weeks
          </CellHeader>
          <Cell>
            £109.80 per week
          </Cell>
        </Row>
        <Row>
          <CellHeader>
            Next 33 weeks
          </CellHeader>
          <Cell>
            £109.80 per week
          </Cell>
        </Row>
        <Row>
          <CellHeader>
            Total estimated pay
          </CellHeader>
          <Cell>
            £4,282.20
          </Cell>
        </Row>
      </React.Fragment>
    }
    caption="Dates and amounts"
  >
    <src__StyledTable>
      <table
        className="c0"
      >
        <Caption>
          <caption
            className="c1"
          >
            Dates and amounts
          </caption>
        </Caption>
        <TableBody>
          <tbody
            className="TableBody-sc-1qqarm8-0"
          >
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      First 6 weeks
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c3"
                  >
                    £109.80 per week
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      Next 33 weeks
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c3"
                  >
                    £109.80 per week
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      Total estimated pay
                    </th>
                  </Cell>
                </CellHeader>
                <Cell>
                  <td
                    className="c3"
                  >
                    £4,282.20
                  </td>
                </Cell>
              </tr>
            </Row>
          </tbody>
        </TableBody>
      </table>
    </src__StyledTable>
  </Table>
</TableWithCaption>
`;

exports[`Table renders a table with custom widths matching snapshot: table with custom widths 1`] = `
.c1 {
  font-weight: 700;
  display: table-caption;
  text-align: left;
}

.c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
  width: 100%;
}

.c2:last-child {
  padding-right: 0;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
  width: 100%;
}

.c3:last-child {
  padding-right: 0;
}

.c4 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c4:last-child {
  padding-right: 0;
}

.c5 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c5:last-child {
  padding-right: 0;
}

.c0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

@media only screen and (min-width:641px) {
  .c2 {
    width: 50%;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    width: 22%;
  }
}

@media print {
  .c0 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c0 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<TableWithCustomWidths>
  <Table
    caption="Custom widths"
    head={
      <Row>
        <CellHeader
          setWidth="one-half"
        >
          one-half
        </CellHeader>
        <CellHeader
          setWidth="22%"
        >
          22%
        </CellHeader>
        <CellHeader>
          Normal
        </CellHeader>
      </Row>
    }
  >
    <src__StyledTable>
      <table
        className="c0"
      >
        <Caption>
          <caption
            className="c1"
          >
            Custom widths
          </caption>
        </Caption>
        <TableHeader>
          <thead
            className="TableHeader-sc-1n1nw4b-0"
          >
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader
                  setWidth="one-half"
                >
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                    setWidth="one-half"
                  >
                    <th
                      className="c2"
                    >
                      one-half
                    </th>
                  </Cell>
                </CellHeader>
                <CellHeader
                  setWidth="22%"
                >
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                    setWidth="22%"
                  >
                    <th
                      className="c3"
                    >
                      22%
                    </th>
                  </Cell>
                </CellHeader>
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c4"
                    >
                      Normal
                    </th>
                  </Cell>
                </CellHeader>
              </tr>
            </Row>
          </thead>
        </TableHeader>
        <TableBody>
          <tbody
            className="TableBody-sc-1qqarm8-0"
          >
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <Cell>
                  <td
                    className="c5"
                  >
                    Column uses setWidth="one-half" in header
                  </td>
                </Cell>
                <Cell>
                  <td
                    className="c5"
                  >
                    setWidth="22%"
                  </td>
                </Cell>
                <Cell>
                  <td
                    className="c5"
                  >
                    Not specified
                  </td>
                </Cell>
              </tr>
            </Row>
          </tbody>
        </TableBody>
      </table>
    </src__StyledTable>
  </Table>
</TableWithCustomWidths>
`;

exports[`Table renders a table with head and numerics matching snapshot: table with head and numerics 1`] = `
.c1 {
  font-weight: 700;
  display: table-caption;
  text-align: left;
}

.c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c4 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c4:last-child {
  padding-right: 0;
}

.c0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

@media print {
  .c4 {
    font-family: sans-serif;
  }
}

@media print {
  .c0 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c0 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 30px;
  }
}

<TableWithHeadAndNumerics>
  <Table
    caption="Attention, I am the caption of this ship!"
    head={
      <Row>
        <CellHeader>
          Month you apply
        </CellHeader>
        <CellHeader
          numeric={true}
        >
          Rate for vehicles
        </CellHeader>
        <CellHeader
          numeric={true}
        >
          Rate for bicycles
        </CellHeader>
      </Row>
    }
  >
    <src__StyledTable>
      <table
        className="c0"
      >
        <Caption>
          <caption
            className="c1"
          >
            Attention, I am the caption of this ship!
          </caption>
        </Caption>
        <TableHeader>
          <thead
            className="TableHeader-sc-1n1nw4b-0"
          >
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      Month you apply
                    </th>
                  </Cell>
                </CellHeader>
                <CellHeader
                  numeric={true}
                >
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                    numeric={true}
                  >
                    <th
                      className="c3"
                    >
                      Rate for vehicles
                    </th>
                  </Cell>
                </CellHeader>
                <CellHeader
                  numeric={true}
                >
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                    numeric={true}
                  >
                    <th
                      className="c3"
                    >
                      Rate for bicycles
                    </th>
                  </Cell>
                </CellHeader>
              </tr>
            </Row>
          </thead>
        </TableHeader>
        <TableBody>
          <tbody
            className="TableBody-sc-1qqarm8-0"
          >
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      January
                    </th>
                  </Cell>
                </CellHeader>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £165.00
                  </td>
                </Cell>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £85.00
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      February
                    </th>
                  </Cell>
                </CellHeader>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £165.00
                  </td>
                </Cell>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £85.00
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      March
                    </th>
                  </Cell>
                </CellHeader>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £151.00
                  </td>
                </Cell>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £77.00
                  </td>
                </Cell>
              </tr>
            </Row>
            <Row>
              <tr
                className="Row-sc-1y8eqfp-0"
              >
                <CellHeader>
                  <Cell
                    as="th"
                    bold={true}
                    isHeader={true}
                  >
                    <th
                      className="c2"
                    >
                      April
                    </th>
                  </Cell>
                </CellHeader>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £136.00
                  </td>
                </Cell>
                <Cell
                  numeric={true}
                >
                  <td
                    className="c4"
                  >
                    £70.00
                  </td>
                </Cell>
              </tr>
            </Row>
          </tbody>
        </TableBody>
      </table>
    </src__StyledTable>
  </Table>
</TableWithHeadAndNumerics>
`;
